@@ -121,6 +121,22 @@ x <- runif(n); y <- x + x^2*.2 + rnorm(n) *.1
 summary(gam(y~s(x,m=c(2,0))+x,method="REML")) ## not quite
 ## is smooth significatly different from zero?
 summary(gam(y~s(x),method="REML")) ## yes!
+
+## example of knot based tprs...
+k <- 10; m <- 2
+y <- y[order(x)];x <- x[order(x)]
+b <- gam(y~s(x,k=k,m=m),method="REML",
+         knots=list(x=seq(0,1,length=k)))
+X <- model.matrix(b)
+par(mfrow=c(1,2))
+plot(x,X[,1],ylim=range(X),type="l")
+for (i in 2:ncol(X)) lines(x,X[,i],col=i)
+
+## compare with eigen based (default)
+b1 <- gam(y~s(x,k=k,m=m),method="REML")
+X1 <- model.matrix(b1)
+plot(x,X1[,1],ylim=range(X1),type="l")
+for (i in 2:ncol(X1)) lines(x,X1[,i],col=i)
 ## see ?gam
 }
 \keyword{models} \keyword{regression}%-- one or more ..
