@@ -7,6 +7,10 @@ Currently deprecated and liable to be removed:
 
 1.8-17
 
+* "bs" basis modified to allow easier control of the interval over which the
+  spline penalty applies which in turn allows more sensible control of 
+  extrapolation behaviour, when this is unavoidable. 
+
 * Fix in uniquecombs - revised faster code (from 1.8-13) could occasionally 
   generate false matches between different input combinations for integer 
   variables or factors. Thanks to Rohan Sadler for reporting the issue that 
